[package]
name = "b_tree"
version = "0.1.0"
edition = "2024"

[dependencies]
memmap2 = "0.9"
bytemuck = { version = "1.21", features = ["derive"] }

axum = "0.8" 
tokio = { version = "1", features = ["full"] }

#  JSON Handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# server
tower-http = { version = "0.5", features = ["cors"] }